plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

// Windows-KR 시스템에서 javac 기본 인코딩이 cp949라 한글 문자열이 깨지는 문제 방어.
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Rate limiting (Token Bucket 알고리즘)
    implementation 'com.bucket4j:bucket4j-core:8.10.1'

    // ✨ 추가: 메모리 누수 방지용 로컬 캐시 (Caffeine)
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // Swagger (API 문서 제공 도구)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'

    // FCM 푸시 알림 (앱 멤버/초대 이벤트)
    implementation 'com.google.firebase:firebase-admin:9.4.0'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}